examples/kubeflow/mnist_with_tfjob/kubflowpach/.cache/manifests/manifests-1.0.0/gcp/basic-auth-ingress/base/gcp-credentials-patch.yaml
# Patch the env/volumes/volumeMounts for GCP credentials
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend-updater
spec:
  template:
    spec:
      containers:
      - name: backend-updater
        volumeMounts:
        - mountPath: /var/run/secrets/sa
          name: sa-key
          readOnly: true
      volumes:
      - name: sa-key
        secret:
          secretName: admin-gcp-sa
